[metadata]
name = pympl115
version = attr: constants.__version__
author = Kodai Tooi
author_email = mrkohtech+pypi@gmail.com
description = Measure and show atmospheric pressure from MPL115a2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ktooi/pympl115
license_files = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
python_requires = >= 2.7
install_requires =
  smbus
entry_points = file: entry_points.cfg

[options.extras_require]
test =
  pytest
  pytest-cov
  pytest-pep8
doc =
  sphinx
  sphinx-rtd-theme

[bdist_wheel]
universal = 1
